objects/ssot__PatientMedRecileStmtRecommendation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Med Recile Stmt Rcmd Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationRecileRecmdId__c</fullName>
        <label>Medication Reconciliation Recmnd</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReconciliationId__c</fullName>
        <label>Medication Reconciliation</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationStatementId__c</fullName>
        <label>Medication Statement</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSysModifiedDateTime__c</fullName>
        <label>Source System Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721965652_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedRecileStmtRecommendation_M_rel</label>
        <referenceTo>ssot__PatientMedicationReconciliation__dlm</referenceTo>
        <relationshipLabel>PatientMedRecileStmtRecommendation_M_rel</relationshipLabel>
        <relationshipName>rel_1716721965652_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721977534_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedRecileStmtRecommendation_M_rel</label>
        <referenceTo>ssot__PatientMedReconRecommendation__dlm</referenceTo>
        <relationshipLabel>PatientMedRecileStmtRecommendation_M_rel</relationshipLabel>
        <relationshipName>rel_1716721977534_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725659988_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedRecileStmtRecommendation_M_rel</label>
        <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
        <relationshipLabel>PatientMedRecileStmtRecommendation_M_rel</relationshipLabel>
        <relationshipName>rel_1716725659988_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>